--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "method-override": "^2.3.5",
     "moment": "^2.11.2",
     "path": "^0.12.7",
-    "pg": "^4.4.4"
+    "pg": "^4.4.4",
+    "react-scripts": "^3.4.0"
   },
   "devDependencies": {
     "babel-core": "^6.4.5",
