--- a/package.json
+++ b/package.json
@@ -2,16 +2,40 @@
   "name": "nexellence",
   "version": "1.0.1",
   "description": "Web Application for an institute management",
+  "author": "luk3Sky",
+  "license": "ISC",
   "engines": {
     "node": "4.2.1"
   },
   "main": "server.js",
   "scripts": {
     "webpack": "webpack",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix .",
+    "format": "prettier --write \"**/*.+(js|jsx|json|yml|yaml|css|md|vue)\""
   },
-  "author": "luk3Sky",
-  "license": "ISC",
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.+(js|jsx)": [
+      "lint:fix",
+      "git add"
+    ],
+    "*.+(json|css|md)": [
+      "format",
+      "git add"
+    ]
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 10"
+  ],
   "dependencies": {
     "babel-plugin-transform-object-rest-spread": "^6.3.13",
     "body-parser": "^1.14.2",
@@ -30,7 +54,13 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-3": "^6.3.13",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-prettier": "^3.1.2",
     "history": "^1.17.0",
+    "lint-staged": "^10.0.9",
+    "prettier": "^2.0.2",
     "react": "^0.14.7",
     "react-addons-linked-state-mixin": "^0.14.7",
     "react-dom": "^0.14.7",
