--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "main": "server.js",
   "scripts": {
     "webpack": "webpack",
+    "webpack:dev": "webpack --watch",
     "start": "node server.js",
     "dev": "nodemon server.js",
     "lint": "eslint .",
