--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.13.4",
     "method-override": "^2.3.5",
     "moment": "^2.11.2",
+    "mysql": "^2.18.1",
     "path": "^0.12.7",
     "pg": "^4.4.4"
   },
