--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "license": "ISC",
   "dependencies": {
     "babel-plugin-transform-object-rest-spread": "^6.3.13",
-    "body-parser": "^1.14.2",
+    "bcrypt": "^4.0.1",
+    "body-parser": "^1.19.0",
     "compression": "^1.6.1",
     "ejs": "^3.0.1",
     "express": "^4.13.4",
