--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
     "not ie <= 10"
   ],
   "dependencies": {
-    "babel-plugin-transform-object-rest-spread": "^6.3.13",
     "body-parser": "^1.14.2",
     "compression": "^1.6.1",
     "express": "^4.13.4",
@@ -44,15 +43,9 @@
     "moment": "^2.11.2",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.2",
-    "path": "^0.12.7",
-    "pg": "^4.4.4"
+    "path": "^0.12.7"
   },
   "devDependencies": {
-    "babel-core": "^6.4.5",
-    "babel-loader": "^6.2.2",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13",
-    "babel-preset-stage-3": "^6.3.13",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-import": "^2.20.1",
@@ -62,11 +55,6 @@
     "husky": "^4.2.3",
     "lint-staged": "^10.0.9",
     "prettier": "^2.0.2",
-    "react": "^0.14.7",
-    "react-addons-linked-state-mixin": "^0.14.7",
-    "react-dom": "^0.14.7",
-    "react-onclickoutside": "^4.5.0",
-    "react-router": "^1.0.3",
-    "webpack": "^1.12.13"
+    "prop-types": "^15.7.2"
   }
 }
