Minor style and ESLint configurations

--- a/.eslintrc
+++ b/.eslintrc
@@ -10,7 +10,8 @@
   "extends": [
     "eslint:recommended",
     "plugin:react/recommended",
-    "plugin:prettier/recommended"
+    "plugin:prettier/recommended",
+    "prettier/react"
   ],
   "parserOptions": {
     "sourceType": "module",
@@ -21,7 +22,7 @@
       "classes": true,
       "jsx": true,
       "allowImportExportEverywhere": false
-    },
+    }
   },
   "settings": {
     "react": {
