--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,9 @@
 {
-  "bracketSpacing": false,
+  "bracketSpacing": true,
   "printWidth": 85,
   "singleQuote": true,
   "arrowParens": "always",
-  "semi": false,
+  "semi": true,
   "tabWidth": 4,
   "trailingComma": "es5"
 }
