--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nexellence",
-  "version": "1.0.1",
+  "version": "1.1.1",
   "description": "Web Application for an institute management",
   "author": "luk3Sky",
   "license": "ISC",
@@ -9,9 +9,10 @@
   },
   "main": "server.js",
   "scripts": {
-    "webpack": "webpack",
+    "client": "cd client && npm start",
     "webpack:dev": "webpack --watch",
     "start": "node server.js",
+    "server": "node server.js",
     "dev": "nodemon server.js",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
@@ -46,6 +47,7 @@
     "path": "^0.12.7"
   },
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-flowtype": "^4.7.0",
