--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
     "name": "Nexellence",
-    "description": "Reference app built with React and the Lightning Design System",
+    "description": "University Management System Application built with React, Lightning Design System, NodeJS, Express and MySQL",
     "repository": "https://github.com/luk3Sky/nexellence",
-    "addons": ["heroku-postgresql:hobby-dev"]
+    "addons": ["jawsdb:kitefin"]
 }
