--- a/package.json
+++ b/package.json
@@ -47,19 +47,13 @@
     "path": "^0.12.7"
   },
   "devDependencies": {
-    "babel-eslint": "^10.1.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
-    "eslint-plugin-flowtype": "^4.7.0",
     "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-react": "^7.19.0",
-    "eslint-watch": "^6.0.1",
     "history": "^1.17.0",
     "husky": "^4.2.3",
     "lint-staged": "^10.0.9",
-    "prettier": "^2.0.2",
-    "prop-types": "^15.7.2"
+    "prettier": "^2.0.2"
   }
 }
