--- a/package.json
+++ b/package.json
@@ -5,18 +5,23 @@
   "author": "luk3Sky",
   "license": "ISC",
   "engines": {
-    "node": "4.2.1"
+    "node": "12.14.1"
   },
   "main": "server.js",
   "scripts": {
-    "client": "cd client && npm start",
-    "webpack:dev": "webpack --watch",
-    "start": "node server.js",
+    "client": "npm start --prefix client",
+    "client:dev": "npm run dev --prefix client",
+    "build": "npm run build --prefix client",
+    "start": "concurrently \"npm run server\" \"npm run client\"",
     "server": "node server.js",
     "dev": "nodemon server.js",
+    "install": "npm run install:server && npm run install:client",
+    "install:client": "npm install --prefix client",
+    "install:server": "npm install",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
-    "format": "prettier --write \"**/*.+(js|jsx|json|yml|yaml|css|md)\""
+    "format": "prettier --write \"**/*.+(js|jsx|json|yml|yaml|css|md)\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=true npm run install && npm run build"
   },
   "husky": {
     "hooks": {
@@ -39,6 +44,7 @@
   "dependencies": {
     "body-parser": "^1.14.2",
     "compression": "^1.6.1",
+    "concurrently": "^5.2.0",
     "express": "^4.13.4",
     "method-override": "^2.3.5",
     "moment": "^2.11.2",
