--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@ language: node_js
 node_js:
     - 12
 services:
-    mysql
-scripts:
-    npm install:full
-    npm run heroku-postbuild
-    npm start
+    - mysql
+script:
+    - npm install:full
+    - npm run heroku-postbuild
+    - npm start
