--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
     "start": "concurrently \"npm run server\" \"npm run client\"",
     "server": "node server.js",
     "dev": "nodemon server.js",
-    "install": "npm run install:server && npm run install:client",
+    "install:full": "npm run install:server && npm run install:client",
     "install:client": "npm install --prefix client",
     "install:server": "npm install",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
     "format": "prettier --write \"**/*.+(js|jsx|json|yml|yaml|css|md)\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=true npm run install && npm run build"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=true npm run install:full && npm run build"
   },
   "husky": {
     "hooks": {
