--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -34,6 +34,8 @@
     "no-unused-vars": "warn",
     "no-plusplus": "error",
     "no-duplicate-imports": "error",
+    "react/prop-types": 0,
+    "react/destructuring-assignment": 0,
     "react/jsx-props-no-spreading": 0,
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
     "jsx-a11y/label-has-associated-control": [
