--- a/client/package.json
+++ b/client/package.json
@@ -49,5 +49,6 @@
     "eslint-plugin-react": "^7.20.0",
     "eslint-watch": "^6.0.1",
     "prettier": "^2.0.5"
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
