--- a/client/package.json
+++ b/client/package.json
@@ -29,7 +29,6 @@
     "@testing-library/react": "^10.2.1",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
-    "jest": "^26.0.1",
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
@@ -37,7 +36,6 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
-    "react-test-renderer": "^16.13.1",
     "redux": "^4.0.5",
     "serve": "^11.3.2"
   },
@@ -50,7 +48,8 @@
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.20.0",
     "eslint-watch": "^6.0.1",
-    "prettier": "^2.0.5"
+    "prettier": "^2.0.5",
+    "react-test-renderer": "^16.13.1"
   },
   "proxy": "http://localhost:5000"
 }
