--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "path": "^0.12.7"
   },
   "devDependencies": {
+    "cucumber": "^6.0.5",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-config-prettier": "^6.10.1",
