--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "path": "^0.12.7"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
     "cucumber": "^6.0.5",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
@@ -69,6 +70,7 @@
     "history": "^1.17.0",
     "husky": "^4.2.3",
     "lint-staged": "^10.0.9",
+    "mocha": "^8.1.1",
     "prettier": "^2.0.2"
   }
 }
