--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "express": "^4.13.4",
     "method-override": "^2.3.5",
     "moment": "^2.11.2",
+    "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.2",
     "path": "^0.12.7"
